# VulkanMemoryAllocator

./: .clang-tidy  .gitignore  .travis.yml  AGENTS.md  CHANGELOG.md  CMakeLists.txt  Doxyfile  LICENSE.txt  README.md
.github/workflows/: build.yml  linux.yaml  static_code_analysis.yaml  vma.yml  windows.yaml
compilation_test/: CMakeLists.txt  vma_impl.cpp
docs/: Recording file format.md
docs/html/: _v_k__k_h_r_dedicated_allocation.html  about_the_library.html  allocation_annotation.html  annotated.html  buffer_suballocation.html  choosing_memory_type.html  classes.html  configuration.html  corruption_detection.html  custom_memory_pools.html  debugging_memory_usage.html  defragmentation.html  deprecated.html  dir_d44c64559bbebec7f509842c48db8b23.html  doxygen_crawl.html  enabling_buffer_device_address.html  faq.html  files.html  functions.html  functions_func.html  functions_vars.html  general_considerations.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  globals_v.html  group__buffer__suballocation.html  group__general.html  group__group__alloc.html  group__group__buffer__suballocation.html  group__group__init.html  group__group__stats.html  group__group__virtual.html  group__layer1.html  group__layer2.html  group__layer3.html  index.html  (+92 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  defines_0.js  defines_1.js  enums_0.js  enumvalues_0.js  files_0.js  functions_0.js  groups_0.js  pages_0.js  pages_1.js  pages_12.js  pages_2.js  pages_3.js  pages_4.js  pages_5.js  pages_6.js  pages_7.js  (+26 more)
include/: vk_mem_alloc.h
premake/: premake5.lua
src/: CMakeLists.txt  Common.cpp  Common.h  Doxyfile  SparseBindingTest.cpp  SparseBindingTest.h  Tests.cpp  Tests.h  VmaUsage.cpp  VmaUsage.h  VolkUsage.cpp  VulkanSample.cpp  vk_mem_alloc.h  vk_mem_alloc.hpp  vk_mem_alloc.xml
src/Shaders/: CMakeLists.txt  Shader.frag  Shader.vert  SparseBindingTest.comp
src/VmaReplay/: CMakeLists.txt  Common.cpp  Common.h  Constants.cpp  Constants.h  VmaReplay.cpp  VmaUsage.cpp  VmaUsage.h
src/cmake/: Config.cmake.in  install_target.cmake
tools/GpuMemDumpVis/: GpuMemDumpVis.py  README.md
tools/VmaDumpVis/: README.md  Sample.json  VmaDumpVis.py
